@@ -1,3 +1,9 @@
+2010-09-07  Stas Boukarev  <stassats@gmail.com>
+
+	* swank-c-p-c.lisp (untokenize-completion): Take an optional
+	argument "delimiter".
+	(longest-compound-prefix): Pass delimiter to untokenize-completion.
+
 2010-09-04  Stas Boukarev  <stassats@gmail.com>
 
 	* swank-fuzzy.lisp (*fuzzy-completion-...*): Change defparameter
